--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-list/account-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-list/account-management-list.component.html
@@ -2,14 +2,7 @@
   <div class="card-header">
     <div class="card-title">
       <span class="card-label">{{ 'ACCOUNTMANAGEMENT.DANHSACHNGUOIDUNG' | translate }}</span>
-      <!-- begin: Filtration form -->
-      <!-- <div class="row" style="width: 484px">
-        <div class="col-lg-12" [formGroup]="searchGroup">
-          <input type="text" class="form-control" name="searchText" placeholder="" value="" formControlName="keyword" />
-        </div>
-      </div> -->
-      <!-- end: Filtration form -->
-      <app-jee-search-form></app-jee-search-form>
+      <app-jee-search-form (keywordEvent)="changeKeyword($event)" (filterEvent)="changeFilter($event)"></app-jee-search-form>
     </div>
     <div class="card-toolbar">
       <button mat-raised-button class="ja_button ja_btn-addnew" (click)="create()">{{ 'COMMOM.THEMMOI' | translate }}</button>
@@ -20,7 +13,7 @@
     <div class="table-responsive angular-bootstrap-table" [ngStyle]="{ height: getHeight() }">
       <table class="table table-head-custom table-vertical-center overflow-hidden">
         <thead>
-          <th class="pl-16">
+          <th class="pl-8">
             <span>{{ 'ACCOUNTMANAGEMENT.NHANVIEN' | translate }}</span>
             <app-sort-icon
               column="nhanvien"
@@ -77,11 +70,17 @@
         </thead>
         <tbody>
           <tr *ngFor="let r of accountManagementService.items$ | async">
-            <td class="pl-8">
-              <div>
-                <div class="row" (click)="hiddenfileinput.click()" style="cursor: pointer">
-                  <ngx-avatar [size]="40" src="{{ r.AvartarImgURL }}" *ngIf="r"></ngx-avatar>
-                  <ngx-avatar [size]="40" [name]="r.FirstName" bgColor="{{ r.BgColor }}" *ngIf="!r.AvartarImgURL"></ngx-avatar>
+            <td>
+              <div class="pl-10">
+                <div class="row" style="cursor: pointer">
+                  <ngx-avatar (click)="hiddenfileinput.click()" [size]="40" src="{{ r.AvartarImgURL }}" *ngIf="r"></ngx-avatar>
+                  <ngx-avatar
+                    (click)="hiddenfileinput.click()"
+                    [size]="40"
+                    [name]="r.FirstName"
+                    bgColor="{{ r.BgColor }}"
+                    *ngIf="!r.AvartarImgURL"
+                  ></ngx-avatar>
                   <span class="pl-3" style="align-self: center">
                     {{ r.FullName }}
                   </span>
@@ -119,7 +118,7 @@
                 </span>
               </div>
             </td>
-            <td>
+            <td style="justify-content: center">
               <mat-slide-toggle (click)="changeTinhTrang(r.Username)" [checked]="r.IsActive"> </mat-slide-toggle>
             </td>
             <td>
