--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-search-form/jee-search-form.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-search-form/jee-search-form.component.html
@@ -1,8 +1,11 @@
 <!-- begin: Filtration form -->
-<div class="sreach-advance-container" (clickOutside2)="clickOutSideFilter()">
+<div class="sreach-advance-container" (clickOutside2)="clickOutSideFilter()" *ngIf="!(isLoading$ | async)">
   <div class="search" [formGroup]="searchGroup">
     <span style="padding-left: 0.69rem" class="svg-icon" [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'"></span>
     <input type="text" class="form-control" placeholder="{{ 'SEARCH.SEARCH1' | translate }}" formControlName="keyword" />
+    <button mat-icon-button>
+      <mat-icon (click)="clearFilter()">close</mat-icon>
+    </button>
     <button mat-icon-button>
       <mat-icon (click)="clickShowFilter(this.showFilter)">arrow_drop_down</mat-icon>
     </button>
@@ -19,7 +22,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="showSearch.username">
         <div class="col-lg-4">
           <span class="text">{{ 'SEARCH.TENDANGNHAP' | translate }}</span>
         </div>
@@ -29,7 +32,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="showSearch.tennhanvien">
         <div class="col-lg-4">
           <span class="text">{{ 'SEARCH.TENNHANVIEN' | translate }}</span>
         </div>
@@ -39,7 +42,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="showSearch.phongban">
         <div class="col-lg-4">
           <span class="text">{{ 'SEARCH.PHONGBAN' | translate }}</span>
         </div>
@@ -49,7 +52,24 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="showSearch.phongban">
+        <div class="col-lg-4">
+          <span class="text">{{ 'SEARCH.PHONGBAN' | translate }}</span>
+        </div>
+        <div class="col-lg-8">
+          <mat-form-field class="example-full-width" style="font-size: 13px">
+            <mat-select (selectionChange)="clickSelect()" formControlName="phongbanid">
+              <ng-container *ngIf="isJeeHR">
+                <mat-option *ngFor="let item of flatJeeHRs" [value]="item.RowID">{{ item.Title }}</mat-option>
+              </ng-container>
+              <ng-container *ngIf="isJeeHR === false">
+                <mat-option *ngFor="let item of flatDepartmentDtos" [value]="item.RowID">{{ item.DepartmentName }}</mat-option>
+              </ng-container>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row" *ngIf="showSearch.chucvu">
         <div class="col-lg-4">
           <span class="text">{{ 'SEARCH.CHUCVU' | translate }}</span>
         </div>
@@ -59,15 +79,25 @@
           </mat-form-field>
         </div>
       </div>
+      <div class="row" *ngIf="showSearch.chucvu">
+        <div class="col-lg-4">
+          <span class="text">{{ 'SEARCH.CHUCVU' | translate }}</span>
+        </div>
+        <div class="col-lg-8">
+          <mat-form-field class="example-full-width">
+            <input class="input-thuong" formControlName="chucvuid" matInput />
+          </mat-form-field>
+        </div>
+      </div>
     </form>
-    <div class="row">
+    <div class="row" *ngIf="showSearch.isAdmin">
       <div class="col-lg-6">
         <div class="row">
           <div class="col-lg-12">
             <mat-checkbox [(ngModel)]="isAdmin"><span class="text">IsAdmin</span></mat-checkbox>
           </div>
         </div>
-        <div class="row">
+        <div class="row" *ngIf="showSearch.dakhoa">
           <div class="col-lg-12">
             <mat-checkbox [(ngModel)]="daKhoa"
               ><span class="text">{{ 'SEARCH.NOTACTIVE' | translate }}</span></mat-checkbox
