--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-jeehr-dialog/account-management-edit-jeehr-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-jeehr-dialog/account-management-edit-jeehr-dialog.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="overlay overlay-block cursor-default modal-body overflow-auto">
-    <ng-container *ngIf="isLoading$ | async">
+    <ng-container *ngIf="isFirstLoading$ | async">
       <div class="overlay-layer bg-transparent">
         <div class="spinner spinner-lg spinner-success"></div>
       </div>
@@ -24,17 +24,17 @@
         <div class="form-group row">
           <div class="col-lg-12">
             <mat-form-field class="example-full-width" *ngIf="!(isFirstLoading$ | async)">
-              <mat-select formControlName="NhanVien" placeholder="{{ 'ACCOUNTMANAGEMENT.TENCHUCVU' | translate }}" #singleSelect>
+              <mat-select formControlName="NhanVien" placeholder="{{ 'ACCOUNTMANAGEMENT.TENNHANVIEN' | translate }}" #singleSelect>
                 <mat-option>
                   <ngx-mat-select-search
                     noEntriesFoundLabel="{{ 'ACCOUNTMANAGEMENT.KHONGTIMTHAY' | translate }}"
-                    placeholderLabel="{{ 'SEARCH.TIMKIEMTHEOTENCHUCVU' | translate }}"
+                    placeholderLabel="{{ 'SEARCH.TIMTHEOTENNHANVIEN' | translate }}"
                     formControlName="NhanVienFilterCtrl"
                   >
                   </ngx-mat-select-search>
                 </mat-option>
-                <mat-option *ngFor="let chucvu of filterChucVus | async" [value]="chucvu.RowID">
-                  {{ chucvu.Title }}
+                <mat-option *ngFor="let nhanvien of filterNhanViens | async" [value]="nhanvien.IDNV">
+                  {{ nhanvien.HoTen }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
