--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.component.html
@@ -11,31 +11,41 @@
         <jeecomment-reaction-content></jeecomment-reaction-content>
       </div>
       <mat-icon data-visualcompletion="css-img" class="icon-like item-align-middle"></mat-icon>
-      <span style="vertical-align: bottom"> Thích </span>
+      <span style="vertical-align: bottom"> {{ 'JEECOMMENT.THICH' | translate }} </span>
     </div>
     <div class="comment-header" (click)="clickButtonComment()">
       <mat-icon data-visualcompletion="css-img" class="item-align-middle" id="icon-comment"></mat-icon>
-      <span style="vertical-align: bottom"> Bình Luận </span>
+      <span style="vertical-align: bottom"> {{ 'JEECOMMENT.BINHLUAN' | translate }} </span>
     </div>
     <div *ngIf="!hiddenShare" class="comment-header">
       <mat-icon data-visualcompletion="css-img" id="icon-share" class="item-align-middle"></mat-icon>
-      <span style="vertical-align: bottom"> Chia Sẻ </span>
+      <span style="vertical-align: bottom"> {{ 'JEECOMMENT.CHIASE' | translate }} </span>
     </div>
   </div>
   <div *ngIf="ShowSpinner$.asObservable() | async; else loading" class="click-show-spinner" [class.spinner]="true"></div>
-  <div *ngIf="(errorMessage$ | async) !== ''" class="show-error">Comment không hợp lệ hoặc đã bị xoá, vui lòng thử lại sau.</div>
+  <div *ngIf="(errorMessage$ | async) !== ''" class="show-error">{{ 'JEECOMMENT.KHONGHOPLE' | translate }}</div>
   <ng-template #loading>
     <div class="comment-content-container" *ngIf="item">
       <ng-container>
-        <div class="comment-filter" *ngIf="item.ViewLengthComment < item.TotalLengthComment">
-          <div class="view-more-comment">
-            <span (click)="viewMoreComment()" class="text-filter"> Xem thêm bình luận </span>
+        <div class="comment-filter">
+          <div class="view-more-comment" *ngIf="item.ViewLengthComment < item.TotalLengthComment">
+            <span (click)="viewMoreComment()" class="text-filter"
+              >{{ 'JEECOMMENT.XEMTHEMBINHLUAN' | translate }} ({{ item.ViewLengthComment }}/{{ item.TotalLengthComment }})
+            </span>
             <span class="click-show-spinner-view-more-comment" [class.spinner]="ShowSpinnerViewMore$.asObservable() | async"></span>
           </div>
-          <div style="display: none" class="filter">
-            <span>Toàn bộ bình luận </span>
+          <div class="filter" [matMenuTriggerFor]="menu">
+            <span> {{ labelFilterComment }}</span>
             <i data-visualcompletion="css-img" class="item-align-middle" id="filter-icon"></i>
           </div>
+          <mat-menu #menu="matMenu">
+            <button (click)="showAllComment()" mat-menu-item>
+              <span>{{ 'JEECOMMENT.TOANBOBINHLUAN' | translate }}</span>
+            </button>
+            <button (click)="showNewComment()" mat-menu-item>
+              <span>{{ 'JEECOMMENT.BINHLUANMOINHAT' | translate }}</span>
+            </button>
+          </mat-menu>
         </div>
         <ng-container *ngFor="let comment of item.Comments">
           <jeecomment-post-comment-content [isDeteachChange$]="isDeteachChange$" [inputLstObjectID]="lstObjectID" [comment]="comment">
